[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/bug_reporter.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.8, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.9, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desc"]
bg_color = Color(0.12, 0.12, 0.16, 1.0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 16.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 12.0

[node name="BugReporter" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="BugReportButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 120.0
offset_right = -10.0
offset_bottom = 165.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn")
text = "BUG (F12)"

[node name="Overlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Toolbar" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -210.0
offset_top = 70.0
offset_right = 210.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SaveFullBtn" type="Button" parent="Toolbar"]
layout_mode = 2
custom_minimum_size = Vector2(130, 0)
text = "Save Full"

[node name="CropBtn" type="Button" parent="Toolbar"]
layout_mode = 2
custom_minimum_size = Vector2(130, 0)
text = "Select Region"

[node name="CloseBtn" type="Button" parent="Toolbar"]
layout_mode = 2
custom_minimum_size = Vector2(130, 0)
text = "Close (ESC)"

[node name="FrozenScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch_mode = 5

[node name="CropOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="DescriptionPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_desc")

[node name="VBox" type="VBoxContainer" parent="DescriptionPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DescLabel" type="Label" parent="DescriptionPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Bug Description (optional):"

[node name="DescTextEdit" type="TextEdit" parent="DescriptionPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
theme_override_font_sizes/font_size = 15
placeholder_text = "Describe the bug here... Use [N] to reference numbered objects."

[node name="DescButtons" type="HBoxContainer" parent="DescriptionPanel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="SaveDescBtn" type="Button" parent="DescriptionPanel/VBox/DescButtons"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
theme_override_font_sizes/font_size = 16
text = "Save"

[node name="SkipDescBtn" type="Button" parent="DescriptionPanel/VBox/DescButtons"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
theme_override_font_sizes/font_size = 16
text = "Skip"

[node name="InfoLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Toolbar/SaveFullBtn" to="." method="_on_save_full_pressed"]
[connection signal="pressed" from="Toolbar/CropBtn" to="." method="_on_crop_pressed"]
[connection signal="pressed" from="Toolbar/CloseBtn" to="." method="_on_close_pressed"]
[connection signal="gui_input" from="CropOverlay" to="." method="_on_crop_gui_input"]
[connection signal="pressed" from="DescriptionPanel/VBox/DescButtons/SaveDescBtn" to="." method="_on_save_desc_pressed"]
[connection signal="pressed" from="DescriptionPanel/VBox/DescButtons/SkipDescBtn" to="." method="_on_skip_desc_pressed"]
